@@ -1,3 +1,11 @@
+== 2026-02-24 22:10 == Bugfix: Pressing 'q' in TUI kills tray and farmer on Windows (v1.2.3) ==
+
+On Windows, pressing 'q' in the TUI called f.Stop() and exited the program, taking
+the tray icon with it. Now 'q' hides the console instead — TUI keeps running hidden,
+farmer stays alive, tray remains active. Only "Quit" from the tray menu exits.
+- internal/ui/app.go (added OnQuit callback to Model, used in handleKey)
+- cmd/twitchpoint/ui_windows.go (set OnQuit to hideConsole, use NewModel directly)
+
 == 2026-02-24 22:00 == Bugfix: Windows auto-start not working with spaces in path (v1.2.2) ==
 
 Registry Run value was unquoted, so paths with spaces (e.g. "C:\Users\John Doe\...")
